Add icon and color

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 name: 'runs-on'
 description: 'Spawn ephemeral self-hosted runners for GitHub Action'
 author: 'Cyril Rohr'
+icon: 'cloud-lightning'
+color: 'black'
 
 inputs:
   github-app-id:
